# bobjot

./: .env.example  .gitignore  PROJECT_CONTEXT.md  README.md  pyproject.toml  requirements.txt
examples/jobs/: soc_analyst_intern.json
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  styles.css
frontend/src/api/: applications.ts  client.ts  exports.ts  jobs.ts  pipeline.ts  resumes.ts
frontend/src/pages/: ApplicationsPage.tsx  DashboardPage.tsx  JobsPage.tsx  PipelinePage.tsx  ResumeUploadPage.tsx  ResumesPage.tsx
frontend/src/types/: api.ts
src/ai_internship_assistant/: __init__.py
tests/: __init__.py  test_api.py  test_application_tracking.py  test_ats_scoring.py  test_candidate_profile_generator.py  test_cli.py  test_document_extraction.py  test_docx_resume_renderer.py  test_full_resume_optimizer.py  test_greenhouse_source.py  test_imports.py  test_job_description_analyzer.py  test_job_normalization.py  test_job_ranking.py  test_job_search_query_generator.py  test_job_sources.py  test_lever_source.py  test_llm_job_description_analyzer.py  test_pdf_resume_renderer.py  test_pipeline_runs.py  test_resume_bullet_rewriter.py  test_resume_models.py  test_resume_optimization_planner.py  test_resume_parser.py  test_resume_renderer.py  test_resume_validation.py  test_resume_versioning.py  test_skill_gap_analyzer.py
tests/data/: internship_experience_resume.txt  multiple_projects_resume.txt  no_experience_resume.txt  simple_one_page_resume.txt  two_page_resume.txt  unusual_formatting_resume.txt
(+97 files in other folders)
