[build-system]
requires = ["setuptools>=78.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-internship-application-assistant"
version = "0.1.0"
description = "AI-assisted resume tailoring and job discovery platform for internships and entry-level roles."
readme = "README.md"
requires-python = ">=3.13"
authors = [
  { name = "AI Internship Application Assistant Contributors" }
]
dependencies = [
  "pydantic>=2.11,<3.0",
  "pydantic-settings>=2.9,<3.0",
  "python-docx>=1.1,<2.0",
  "pdfplumber>=0.11,<1.0",
  "openai>=1.80,<2.0",
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.34,<1.0",
  "httpx>=0.28,<1.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9.0",
  "ruff>=0.11,<1.0",
  "mypy>=1.15,<2.0"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py313"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "B",
  "UP",
  "N",
  "ANN",
  "S"
]
ignore = [
  "ANN101",
  "ANN102",
  "S101"
]

[tool.mypy]
python_version = "3.13"
strict = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]
mypy_path = "src"
